--- a/cucumber.yml
+++ b/cucumber.yml
@@ -1,6 +1,15 @@
 #default: --no-source --color --format pretty
-default: FIG_NEWTON_FILE=local_iOS93_iphone.yml target=local --format html --out report/default_report.html --format pretty
-local_iOS93_iphone: FIG_NEWTON_FILE=local_iOS93_iphone.yml target=local --format html --out report/default_report.html --format pretty
-sauce_iOS80_iphone: FIG_NEWTON_FILE=sauce_iOS80_iphone.yml target=sauce --format html --out report/default_report.html --format pretty
-sauce_iOS90_iphone: FIG_NEWTON_FILE=sauce_iOS90_iphone.yml target=sauce --format html --out report/default_report.html --format pretty
-sauce_android44_emulator: FIG_NEWTON_FILE=sauce_android44_emulator.yml target=sauce --format html --out report/default_report.html --format pretty
+
+# Profiles for local environment - LOCAL APPIUM SERVER
+default: FIG_NEWTON_FILE=local_env.yml TARGET=local DEVICE=local --format html --out report/default_report.html --format pretty
+local: FIG_NEWTON_FILE=local_env.yml TARGET=local DEVICE=local --format html --out report/default_report.html --format pretty
+
+# Profiles for test environment - SAUCE LABS
+ios80_test: FIG_NEWTON_FILE=test_env.yml TARGET=sauce DEVICE=ios80 --format html --out report/default_report.html --format pretty
+ios90_test: FIG_NEWTON_FILE=test_env.yml TARGET=sauce DEVICE=ios90 --format html --out report/default_report.html --format pretty
+android44_emulator_test: FIG_NEWTON_FILE=test_env.yml target=sauce DEVICE=android44_emulator --format html --out report/default_report.html --format pretty
+
+# Profiles for development environment - SAUCE LABS
+ios80_dev: FIG_NEWTON_FILE=dev_env.yml TARGET=sauce DEVICE=ios80 --format html --out report/default_report.html --format pretty
+ios90_dev: FIG_NEWTON_FILE=dev_env.yml TARGET=sauce DEVICE=ios90 --format html --out report/default_report.html --format pretty
+android44_emulator_dev: FIG_NEWTON_FILE=dev_env.yml target=sauce DEVICE=android44_emulator --format html --out report/default_report.html --format pretty
