--- a/config/devices/local.yml
+++ b/config/devices/local.yml
@@ -1,7 +1,10 @@
 #app_path: 'http://appium.s3.amazonaws.com/TestApp7.1.app.zip'
+
 #platform_name: 'iOS'
 #platform_version: '9.3'
 #device_name: 'iPhone 6'
+#appium_version: '1.5.1'
+#autoAcceptAlerts: 'true'
 
 platform_name: 'Android'
 platform_version: '4.4'
