--- a/config/environments/local_env.yml
+++ b/config/environments/local_env.yml
@@ -3,7 +3,9 @@
 #'/Users/stephanydaneri/Documents/APPIUM_CONFIG_FILES/WebViewApp7.1.app.zip'
 # Case of Camera, Map (installed on Android): path should be empty
 
-walle_app_path: '/Users/stephanydaneri/Documents/APPIUM_CONFIG_FILES/TestApp7.1.app.zip' #'/Users/stephanydaneri/Documents/workspace/poc_aws_basictest/src/test/resources/apps/ContactManager.apk'
+walle_app_path: ''
+#'/Users/stephanydaneri/Documents/APPIUM_CONFIG_FILES/TestApp7.1.app.zip'
+#'/Users/stephanydaneri/Documents/workspace/poc_aws_basictest/src/test/resources/apps/ContactManager.apk'
 webview_url:
 width:
 height:
